--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
     </div>
 
     <div class='clock'>
-      <span id='hour'>02:</span>
-      <span id='minute'>30:</span>
-      <span id='second'>09</span>
+      <span id='hour'></span>
+      <span id='minute'></span>
+      <span id='second'></span>
     </div>
   </div>
+  <script src='app.js' defer></script>
+
 </body>
 </html>
